--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,7 +19,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/*"]
+    }
   },
   "include": ["vite.config.ts"]
 }
