--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@chakra-ui/react": "^3.20.0",
     "@emotion/react": "^11.14.0",
     "lucide-react": "^0.513.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2"
   },
