--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/charts": "^3.20.0",
     "@chakra-ui/react": "^3.20.0",
     "@emotion/react": "^11.14.0",
+    "@fontsource/lato": "^5.2.6",
+    "fontsource": "^0.0.1-security",
+    "import": "^0.0.6",
     "lucide-react": "^0.513.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
