--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,6 +19,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
 
+    "types": ["node"],
+
     "baseUrl": "./",
     "paths": {
       "@app/*": ["src/*"]
